--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -16,10 +16,11 @@
 
 ## Week 3
 
-- [Monday, Tuesday] Drafted some sections in the proposal including:
+- Drafted some sections in the proposal including:
     - Epic
     - Architecture
-- [Wednesday] Asked tutor (Ali) to review and discuss the proposal, and involved in drawing architecture graph that was put in the proposal
+- Asked tutor (Ali) to review and discuss the proposal, and involved in drawing architecture graph that was put in the proposal
+- Set up the git repo and link the remote one 
 
 ## Week 4
 
@@ -27,5 +28,5 @@
     - Finialised my allocated sections
     - Improved the graph of system flow that was put in the proposal 
     - Modified and improved some epic stories in the proposal
-- [Tuesday] Set up the git repo and link the remote one 
+- [Tuesday] Init database SQL file and create database, gonna start project tomorrow.
 
