create my branch

--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -29,4 +29,6 @@
     - Improved the graph of system flow that was put in the proposal 
     - Modified and improved some epic stories in the proposal
 - [Tuesday] Init database SQL file and create database, gonna start project tomorrow.
+- Decide some basic functions, and init backend and frontend.
+- Make my own branch.
 
