--- a/doc/5125807-diary.md
+++ b/doc/5125807-diary.md
@@ -1,6 +1,19 @@
 
-#Week1 
+Week1 
 1.Read project specs
 2.formate group
 
-#week2
+week2
+1.decieded which project topic we will do
+2.start write project proposal 
+3.meeting for discussing epic story
+
+week3
+1.meeting for finshing project proposal
+2.set up github group 
+
+week4
+1.start do the first part of project 
+2.allocate job
+
+
