add how to init database in README

--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -39,4 +39,6 @@
         - Close current account
     - Activate
         - Email verification
+- 10.12 We get a meeting, talk about frontend and backend. Learned about angular and API and diagflow
+- 10.12 Writing user profiles API
 
