--- a/doc/5138091-diary.md
+++ b/doc/5138091-diary.md
@@ -15,3 +15,6 @@
 
 # Week 4
     - Final modification of our proposal
+    - Learn angular
+    - create a dialogflow agent. Agent can chat with users and ask users the hotel and date they want to book.
+    - had a meeting. talking about work to do and techniques to learn.
