add the activate url in the email

--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -42,3 +42,7 @@
 - 10.12 We get a meeting, talk about frontend and backend. Learned about angular and API and diagflow
 - 10.12 Writing user profiles API
 
+# Week 5
+
+- 10.14 We get a meeting, and finish login and sign up function both backend and frontend. Also we apply a *Gmail* for our project mail verification. And try to learn angular help to do frontend.
+- 10.15 We get the activate function works through email in backend and frontend.
