--- a/doc/5138091-diary.md
+++ b/doc/5138091-diary.md
@@ -18,3 +18,8 @@
     - Learn angular
     - create a dialogflow agent. Agent can chat with users and ask users the hotel and date they want to book.
     - had a meeting. talking about work to do and techniques to learn.
+
+# Week 5
+    - Add "Address" entity to the dialogflow agent
+    - Work out how to send request to dialogflow
+    - make our agent perform better
