update my diary

--- a/doc/5052592-diary.md
+++ b/doc/5052592-diary.md
@@ -20,3 +20,14 @@
       - Improved the graph of system flow that was put in the proposal 
       - Modified and improved some epic stories in the proposal
   - [Tuesday] Set up the git repo and link the remote one 
+  - The rest of the week
+      - Developing login, signup, activating email functionalities
+        - Have basic UI done and functionalities working
+# Week 5
+    - Didn't do too much on the project because of catching up other courses
+    - Continue developing the features of login, signup, adding some CSS effects
+# Week 6
+    - [Tuesday] Tweaking the CSS template and trying to embbed the template UI style into our project.
+    - [Wednesday] Set up the communication between dialogflow and the frontend and the backend. Also redesign the user interface for different functionalities, having basic chatbot ui. Doing some research on interactive map api, and I may use `mapbox` to develop.
+
+
