--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -46,3 +46,11 @@
 
 - 10.14 We get a meeting, and finish login and sign up function both backend and frontend. Also we apply a *Gmail* for our project mail verification. And try to learn angular help to do frontend.
 - 10.15 We get the activate function works through email in backend and frontend.
+
+
+
+# Week 6
+
+- 10.22 We use a new html template, work with toby and try to figrout how to use that
+- 10.23 We test our dialogflow chating API, and it works
+- 10.26 Finish all infomation about auth functions
