--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -54,3 +54,4 @@
 - 10.22 We use a new html template, work with toby and try to figrout how to use that
 - 10.23 We test our dialogflow chating API, and it works
 - 10.26 Finish all infomation about auth functions
+- 10.27 Add adavtor in nav bar and add logout function
