--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -55,3 +55,9 @@
 - 10.23 We test our dialogflow chating API, and it works
 - 10.26 Finish all infomation about auth functions
 - 10.27 Add adavtor in nav bar and add logout function
+
+# Week 7
+
+- 10.29 Fix user image and add hotel info for map function and search info fucntions
+
+  
