--- a/doc/5138091-diary.md
+++ b/doc/5138091-diary.md
@@ -23,3 +23,8 @@
     - Add "Address" entity to the dialogflow agent
     - Work out how to send request to dialogflow
     - make our agent perform better
+
+# Week 6
+    - work out how to set google authentication for dialogflow
+    - complete interaction with backend and dialogflow
+    - learning how to write chatbox for chatbot
