--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -59,5 +59,5 @@
 # Week 7
 
 - 10.29 Fix user image and add hotel info for map function and search info fucntions
-
-  
+- 10.30 Add booking search functions and make helper functions for map 
+- 10.31 Add all the data into database
