update my diary

--- a/doc/5052592-diary.md
+++ b/doc/5052592-diary.md
@@ -30,4 +30,6 @@
     - [Tuesday] Tweaking the CSS template and trying to embbed the template UI style into our project.
     - [Wednesday] Set up the communication between dialogflow and the frontend and the backend. Also redesign the user interface for different functionalities, having basic chatbot ui. Doing some research on interactive map api, and I may use `mapbox` to develop.
     - [Thursday, Friday] Inserting Mapbox into the Angular project. Now the users can draw lines and dots on the real map! Then the map can auto-generate a route between these dots(locations). Cool! 
-
+# Week 7
+    - Doing itinerary planner part:
+        - Finished interactive map with bug free using `Mapbox GL`
