finish add hotel functions and html page, gonna do update tonight

--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -61,3 +61,8 @@
 - 10.29 Fix user image and add hotel info for map function and search info fucntions
 - 10.30 Add booking search functions and make helper functions for map 
 - 10.31 Add all the data into database
+- 11.3 Finish add hotel html page. Not finish backend yet
+
+# Week 8
+
+- 11.4 Finish Hotel Upload backend functions
