finish delete functions

--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -65,4 +65,4 @@
 
 # Week 8
 
-- 11.4 Finish Hotel Upload backend functions
+- 11.4 Finish Hotel Upload backend functions & finish delete functions and pages
