--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -65,4 +65,5 @@
 
 # Week 8
 
-- 11.4 Finish Hotel Upload backend functions & finish delete functions and pages
+- 11.4 Finish Hotel Upload backend functions & finish delete functions and pages.
+- Already finish all functions about hotel management functions
