--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -67,3 +67,9 @@
 
 - 11.4 Finish Hotel Upload backend functions & finish delete functions and pages.
 - Already finish all functions about hotel management functions
+- Try to solve how to use dialogflow with python requestes
+
+# Week 9
+
+- Change the hotel management into new functions
+- And change the database model into hotels and rooms
