--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -73,3 +73,4 @@
 
 - Change the hotel management into new functions
 - And change the database model into hotels and rooms
+- Add new functions of hotel and room which is managment
