store info in chathandling

--- a/doc/5138091-diary.md
+++ b/doc/5138091-diary.md
@@ -28,3 +28,14 @@
     - work out how to set google authentication for dialogflow
     - complete interaction with backend and dialogflow
     - learning how to write chatbox for chatbot
+
+# Week 7
+    - improve our chatbot
+        - add "room size" entity
+        - add firstname and lastname
+    - do frontend part for chatbot, haven't finish
+
+# Week 8
+    - compelete the charbot interface
+
+# Week 9
