change the upload hotel images into optional

--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -74,3 +74,4 @@
 - Change the hotel management into new functions
 - And change the database model into hotels and rooms
 - Add new functions of hotel and room which is managment
+- Change the upload hotel images into optional, and add a new functions
