--- a/doc/5125807-diary.md
+++ b/doc/5125807-diary.md
@@ -17,7 +17,26 @@ week4
 2.allocate job
 
 week5
-1.Learn angular and html and do the login page 
+1.Learn angular and html and do the login page
+
+
+Week6
+finish login page and signup page begin to do search
+
+week7
+finish the main part of search, but still have some bug.
+begin to do the booking part.
+
+week8
+Cause i have another assignment need to finish, not pay much time on this project. 
+finish the bug of search 
+
+week9
+begin to do the recommadation part,  we decide get recommendations from www.booking.com. and  use api from rapidapi.
+we reallocate the jobs to the teammates.
+we redesign the hotel management module by using Angular framework.
+
+
 
 
 
