--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -75,3 +75,9 @@
 - And change the database model into hotels and rooms
 - Add new functions of hotel and room which is managment
 - Change the upload hotel images into optional, and add a new functions
+
+# Week 10
+
+- Add new booking functions
+- Add hotel review API
+- Add check availability functions 
