add functions for chat box search and booking

--- a/doc/5139935-diary.md
+++ b/doc/5139935-diary.md
@@ -81,3 +81,4 @@
 - Add new booking functions
 - Add hotel review API
 - Add check availability functions 
+- Add booking and search API for chat box
