--- a/diary/5052592-diary.md
+++ b/diary/5052592-diary.md
@@ -54,3 +54,7 @@
     - Spend two days (Friday, Saturday) on developing it
     - Now it can work perfectly
     - Start working on search feature
+# Week 10
+- [Monday, Tuesday]
+    - catching up everything: booking functionality, comment funtionality, and listing managements
+- Wednesday: did the demo
